# fcitx5-vinput

./: .dockerignore  CMakeLists.txt  Dockerfile.debian  README.md  README_zh.md  flake.nix  justfile
.github/workflows/: channels.yml  nix-cache.yml  sync-nixpkgs.yml  sync-sherpa-onnx.yml
data/asr-providers/: mlx_audio_speech_to_text.py
nix/: package.nix
packaging/debian/: control
packaging/flatpak/: ci-manifest.yaml  org.fcitx.Fcitx5.Addon.Vinput.yaml
po/: CMakeLists.txt  zh_CN.po
scripts/: build-sherpa-onnx.sh  bump-sherpa-onnx.sh  sherpa-onnx-vars.sh
src/addon/: CMakeLists.txt
src/addon/core/: vinput.cpp  vinput.h
src/addon/dbus/: vinput_dbus.cpp
src/addon/input/: vinput_keyevent.cpp
src/addon/menu/: vinput_menu.cpp
src/cli/: CMakeLists.txt
src/cli/config/: device_actions.cpp  llm_actions.cpp  scene_actions.cpp
src/cli/runtime/: dbus_client.cpp
src/common/: CMakeLists.txt
src/common/config/: vinput_config.cpp  vinput_config.h
src/common/dbus/: dbus_interface.h  error_info.cpp  error_info.h
src/common/registry/: registry_i18n.cpp
src/common/utils/: path_utils.cpp  path_utils.h  url_utils.h
src/daemon/: CMakeLists.txt  main.cpp
src/daemon/audio/: audio_capture.cpp
src/daemon/postprocess/: post_processor.cpp  prompt_template.cpp  prompt_template.h
src/daemon/remote/: remote_text_service.cpp  remote_text_service.h
src/daemon/runtime/: daemon_runtime_controller.cpp  daemon_runtime_controller.h  dbus_service.cpp
src/gui/: CMakeLists.txt
src/gui/pages/control/: control_page.cpp
src/gui/pages/llm/: llm_page.cpp
src/gui/utils/: gui_helpers.cpp
